jetpack: frontend: new design! (html/css)

--- a/agents/jetpack/design/design.css
+++ b/agents/jetpack/design/design.css
@@ -1,11 +1,4 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>a|os</title>
-    <style>
-/*IMPORTANT: The styles are copied from design/design.css - do not edit here */      
-
+﻿
 /**************************************************
 * Fonts 
 **************************************************/
@@ -681,243 +674,3 @@ a, a * {
     --item-bg-color: var(--button-bg-color);
     --item-fg-color: var(--gray4);
 }
-    </style>
-    <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
-</head>
-<body id="body">
-    <div id="app" class="aos-app show-artifacts-view show-scope-view">
-        <div id="header" class="aos-header aos-panel panel-border-bottom">
-            <div class="header-logo">
-                <div class="aos-logo"></div>
-            </div>
-            <div class="header-nav aos-nav">
-                <a href="?chat=main" class="nav-item"><div class="item-icon aos-icon icon-agent"></div><div class="item-text">Agent</div></a>
-                {% if current_chat != 'main' %}
-                <a href="?chat={{current_chat}}" class="nav-item selected"><div class="item-icon aos-icon icon-ability"></div><div class="item-text">{{current_chat_title}}</div></a>
-                {% endif %}
-            </div>
-            <div class="header-tools aos-toolbar">
-                <a class="toolbar-item action-toggle-scope-view"><div class="item-icon aos-icon icon-ability"></div></a>
-                <a class="toolbar-item action-toggle-artifacts-view"><div class="item-icon aos-icon icon-artifact"></div></a>
-            </div>
-        </div>
-        <div id="content" class="aos-app-layout">
-            <div id="main-view" class="aos-ability-chat aos-panel">
-                <div id="chat-messages" class="ability-chat-messages aos-panel">
-                    <div class="panel-header">
-                        <div class="header-tools aos-toolbar"></div>
-                        <div class="header-nav aos-nav">
-                            <div class="nav-item"><div class="item-text">Ability: {{current_chat_title}}</div></div>
-                        </div>
-                        <div class="header-tools aos-toolbar"></div>
-                    </div>
-                    <div id="messages-scrollview" class="panel-scrollview">
-                        <div class="panel-content">
-                            <div id="messages" class="aos-conversation"
-                                 hx-get="../../{{current_chat_id}}/query/messages"
-                                 hx-trigger="load, receipt"
-                                 hx-vals="js:{messagekey: getMessageFilter(event)}"
-                                 hx-swap="beforeend">
-                            </div>
-                        </div>
-                        <div class="panel-content">
-                            <div id="loader" class="aos-loader">
-                                <div class="layer layer-1 aos-icon icon-loader-a"></div>
-                                <div class="layer layer-2 aos-icon icon-loader-b"></div>
-                                <div class="layer layer-3 aos-icon icon-loader-c"></div>
-                            </div>
-                            <div style="height:2em"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="ability-chat-input aos-panel panel-border-top">
-                    <div class="panel-content">
-                        <div class="aos-message-input">
-                            <input id="chat-input" class="aos-input" />
-                            <button id="send-button" class="aos-button">Send</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="sidebar" class="aos-sidebar aos-panel panel-border-left">
-                <div id="scope-view" class="aos-panel">
-                    <div class="panel-header">
-                        <div class="header-nav aos-nav">
-                            <div class="nav-item"><div class="item-text">Scope</div></div>
-                        </div>
-                        <div class="header-tools aos-toolbar">
-                            <a id="new-chat" class="toolbar-item"><div class="item-icon aos-icon icon-add"></div></a>
-                        </div>
-                    </div>
-                    <div class="panel-content">
-                        <div class="aos-list">
-                            {% for name, title in chat_titles.items() %}
-                            <a href="?chat={{name}}" class="list-item {% if name == current_chat %}selected{% endif %}"><div class="item-icon aos-icon icon-ability"></div><div class="item-text">{{title}}</div></a>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-                <div id="artifacts-view" class="aos-panel panel-border-top">
-                    <div class="panel-header">
-                        <div class="header-nav aos-nav">
-                            <div class="nav-item"><div class="item-text">Artifacts</div></div>
-                        </div>
-                        <div class="header-tools aos-toolbar">
-                        </div>
-                    </div>
-                    <div id="artifacts-items" class="panel-content"
-                         hx-get="../../{{current_chat_id}}/query/artifacts"
-                         hx-trigger="load, artifact" 
-                         hx-swap="innerHTML">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        const agent_id = "{{agent_id}}"
-        const frontend_id = "{{frontend_id}}"
-        const chat_actors = JSON.parse('{{chat_actors|tojson}}')
-        const chat_titles = JSON.parse('{{chat_titles|tojson}}')
-        const current_chat = "{{current_chat}}"
-        const current_chat_id = "{{current_chat_id}}"
-
-        const appElem = document.getElementById('app');
-        const messagesScrollViewElem = document.getElementById('messages-scrollview');
-        const chatInput = document.getElementById('chat-input');
-        const sendButton = document.getElementById('send-button');
-        const newChatButton = document.getElementById('new-chat');
-
-        // Expands the textarea to fit its content
-        // dankrusi: disabled for now...
-        //chatInput.addEventListener('input', function() {
-        //    this.style.height = (this.scrollHeight) + 'px';
-        //});
-
-        // Bind app actions
-        Array.from(document.getElementsByClassName('action-toggle-scope-view')).forEach(function (elem) {
-            elem.addEventListener("click", function () {
-                appElem.classList.toggle("show-scope-view");
-            });
-        });
-        Array.from(document.getElementsByClassName('action-toggle-artifacts-view')).forEach(function (elem) {
-            elem.addEventListener("click", function () {
-                appElem.classList.toggle("show-artifacts-view");
-            });
-        });
-
-        // Sends the message when Enter is pressed, and adds a new line when Ctrl+Enter is pressed
-        chatInput.addEventListener('keydown', function(e) {
-            if (e.key === 'Enter') {
-                if (!e.shiftKey) {
-                    // Prevent the default "Enter" behaviour (adding a new line)
-                    e.preventDefault();
-                    // Send the message (you'll need to implement this function yourself)
-                    sendMessage();
-                }
-            }
-        });
-
-        // Sends the message when the button is clicked
-        sendButton.addEventListener('click', sendMessage);
-        function sendMessage() {
-            chat_inbox_url = "../../{{current_chat_id}}/inbox"
-            const message = chatInput.value.trim();
-            if (message) {
-                console.log('Sending message:', message);
-                // Send the message (you'll need to implement this function yourself)
-                fetch(chat_inbox_url, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'text/plain'
-                    },
-                    body: message
-                });
-                // Clear the input
-                chatInput.value = '';
-                //chatInput.style.height = 'auto';
-            }
-        }
-
-        newChatButton.addEventListener('click', newChat)
-        function newChat(){
-            frontend_inbox_url = "../../{{frontend_id}}/inbox"
-            //ask for name, then post
-            const chatName = prompt("Please enter a name for the scope", "New Scope");
-            if (chatName != null) {
-                console.log('Creating new chat:', chatName);
-                // Send the message (you'll need to implement this function yourself)
-                fetch(frontend_inbox_url, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'AOS-Message-Type': 'create-chat'
-                    },
-                    body: JSON.stringify({'name': chatName})
-                });
-            }
-        }
-
-        const evtSource = new EventSource("../../../messages-sse?content=true&mt=receipt&mt=new-chat&mt=thinking&mt=artifact");
-        evtSource.onmessage = (e) => {
-            console.log('SSE Event, message:', e);
-        };
-
-        evtSource.addEventListener('receipt', (e) => {
-            data = JSON.parse(e.data);
-            //console.log('SSE Event, receipt:', data);
-            if(data.sender_id == current_chat_id && data.content != null){
-                htmx.trigger("#messages", "receipt", {messagekey: data.content});
-                document.getElementById('loader').classList.remove('loading');
-            }
-            else{
-                //todo indicate that there are new messages in this other chat
-                console.log('SSE Event: Not for current chat, ignoring');
-            }
-        });
-
-        evtSource.addEventListener('thinking', (e) => {
-            data = JSON.parse(e.data);
-            console.log('SSE Event, thinking', data);
-            document.getElementById('loader').classList.add('loading');
-            window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
-        });
-
-        evtSource.addEventListener('artifact', (e) => {
-            data = JSON.parse(e.data);
-            console.log('SSE Event, artifact:', data);
-            if(data.sender_id == current_chat_id && data.content != null){
-                htmx.trigger("#artifacts-items", "artifact", {});
-            }
-            else{
-                //todo indicate that there are new artifacts in another chat
-                console.log('SSE Event: Not for current chat, ignoring');
-            }
-        });
-
-        evtSource.addEventListener('new-chat', (e) => {
-            data = JSON.parse(e.data);
-            console.log('SSE Event, new-chat', data);
-            //redirect to new chat
-            window.location.href = "?chat=" + data.content;
-        });
-
-
-        function getMessageFilter(e){
-            //if the event contain messagekey, return it
-            //console.log('Getting message filter for event:', e);
-            if(e.detail != null && e.detail.messagekey != null){
-                return e.detail.messagekey;
-            }
-            return null;
-        }
-
-        htmx.on('htmx:afterSwap', function(evt) {
-            messagesScrollViewElem.scrollTo({ top: messagesScrollViewElem.scrollHeight, behavior: 'smooth'});
-        });
-
-    </script>
-
-</body>
-</html>
