--- a/agents/jetpack/templates/artifacts.html
+++ b/agents/jetpack/templates/artifacts.html
@@ -1,8 +1,9 @@
-<span class="font-semibold whitespace-nowrap text-gray-500 dark:text-white">Artifacts</span>
 {% if artifacts|length == 0 %}
-<span class="whitespace-nowrap text-gray-500 dark:text-white">No artifacts yet</span>
+    No artifacts yet
 {% else %}
+    <div class="aos-list">
     {% for artifact in artifacts %}
-    <span class="whitespace-nowrap">{{artifact.emoji|safe}} <a href="{{artifact.url|safe}}" target="_blank" class="underline">{{artifact.title}}</a></span>
-    {% endfor %} 
+        <a href="{{artifact.url|safe}}" target="_blank" class="list-item"><div class="item-icon aos-icon icon-artifact"></div><div class="item-text">{{artifact.title}}</div></a>
+    {% endfor %}
+    </div>
 {% endif %}
