working on demo

--- a/agents/jetpack/templates/index.html
+++ b/agents/jetpack/templates/index.html
@@ -540,7 +540,7 @@ a, a * {
 .aos-message-input input {
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
-    min-width: 600px;
+    min-width: 500px;
 }
 .aos-message-input button {
     border-top-left-radius: 0px;
@@ -574,7 +574,7 @@ a, a * {
     display: flex;
     flex-direction: column;
     gap: var(--padding);
-    max-width: 800px;
+    max-width: 600px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -710,7 +710,7 @@ a, a * {
                     <div class="panel-header">
                         <div class="header-tools aos-toolbar"></div>
                         <div class="header-nav aos-nav">
-                            <div class="nav-item"><div class="item-text">Ability: {{current_chat_title}}</div></div>
+                            <div class="nav-item"><div class="item-text">Scope: {{current_chat_title}}</div></div>
                         </div>
                         <div class="header-tools aos-toolbar"></div>
                     </div>
