--- a/agents/jetpack/design/design.css
+++ b/agents/jetpack/design/design.css
@@ -589,10 +589,12 @@ a, a * {
 .aos-message .message-text {
     display: block;
     line-height: 1.2em;
+    word-break: break-word;
 }
-.aos-message .message-text p + p,
-.aos-message .message-text pre + p,
-.aos-message .message-text p + pre {
+.aos-message .message-text p:not(:first-child),
+.aos-message .message-text pre:not(:first-child),
+.aos-message .message-text ul:not(:first-child),
+.aos-message .message-text img:not(:first-child) {
     margin-top: 1em;
 }
 .aos-message .message-text pre {
